<resources>
    <string name="app_name">GistExplorer</string>
    <string name="created">Created: %1$s</string>
    <string name="file">File: %1$s</string>
    <string name="comments">Comments:  %1$s</string>

    <string name="type">Type:  %1$s</string>
    <string name="language">Language:  %1$s</string>
    <string name="url">Url:  %1$s</string>
    <string name="size">Size:  %1$s</string>
</resources>